@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.5</version>
+        <version>2.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
@@ -37,19 +37,18 @@
                 <version>3.0.0</version>
                 <configuration>
                     <to>
-                        <image>233873070253.dkr.ecr.us-west-2.amazonaws.com/my-spring-boot-app:${{ github.sha }}</image>
+                        <image>233873070253.dkr.ecr.us-west-2.amazonaws.com/my-spring-boot-app:${project.version}</image>
                     </to>
+                    <from>
+                        <image>adoptopenjdk:17-jre-hotspot</image>
+                    </from>
                     <container>
-                        <mainClass>com.example.MySpringBootApplication</mainClass>
-                        <ports>
-                            <port>8080</port>
-                        </ports>
+                        <jvmFlags>
+                            <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
+                            <jvmFlag>-XX:+UseCGroupMemoryLimitForHeap</jvmFlag>
+                        </jvmFlags>
                     </container>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
